li added in new todo

--- a/projects/new-todo/src/app/todos/todos.component.html
+++ b/projects/new-todo/src/app/todos/todos.component.html
@@ -1,1 +1,7 @@
-<h1>Here is new Toto Component Header</h1>
+<h1>Here is new Todo Component Header</h1>
+
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+</ul>
